<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EasyRun</string>
    <string name="action_settings">Settings</string>
    <string name="title_start">start</string>
    <string name="title_music">music</string>
    <string name="title_activities">activities</string>
    <string name="title_basic_data">basis</string>
    <string name="title_graphs">graphs</string>
    <string name="default_distance">Try It Out</string>
    <string name="button_start">Start</string>

    <!-- units -->
    <string name="unit_speed">km/h</string>
    <string name="unit_calories">kcal</string>
    <string name="unit_calories_speed">kcal/h</string>
    <string name="unit_distance">km</string>
    <string name="unit_pace">min/km</string>
    <string name="unit_time_min">min</string>
    <string name="avg_speed">AVG SPEED</string>
    <string name="calories">CALORIES</string>
    <string name="runs">RUNS</string>
    <string name="title_activity_running_exercise">RunningExerciseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="time">TIME</string>
    <string name="map">map</string>
    <string name="gesture">gesture</string>
    <string name="title_activity_gesture_mode">GestureModeActivity</string>
    <string name="gesture_mode">Control through Gestures</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="map_mode">Map Mode</string>
    <string name="title_activity_save_activity">SaveActivityActivity</string>
    <string name="button_save">Save</string>
    <string name="note">Note</string>
    <string name="trash">Trash</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="gps_low_dialog_title">GPS accuracy is low</string>
    <string name="gps_low_dialog_info">GPS accuracy is low. You can continue but your activity may not be accurate.</string>
    <string name="dump_activity_dialog_title">Dump the Activity</string>
    <string name="dump_activity_dialog_info">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="activity_save">Activity Saved</string>
    <string name="activity_dump">Activity Canceled</string>
    <string name="screen_is_locked">Screen is locked.</string>
    <string name="title_activity_activity_record">ActivityRecordActivity</string>
    <string name="Note">Note:</string>
    <string name="no_note">No Note</string>
    <string name="no_target">No target</string>
    <string name="_continue">Continue</string>
    <string name="whats_your_target_distance">What is your target?</string>
    <string name="target_achieved">Target achieved!</string>
    <string name="title_activity_setting">Setting</string>
    <string name="unit_weight">kg</string>

    <!-- actionbar buttons -->
    <string name="trash">Trash</string>
    <string name="statistics">Statistics</string>

    <!-- weather -->
    <string name="centigrade">°C</string>
    <string name="getting_weather_advice">Getting weather information...</string>
    <string name="no_weather_advice">Can\'t get weather information</string>
    <string name="run_advice">Let\'s Run Today!</string>
    <string name="run_advice">Maybe have a rest...</string>

    <!-- Setting preferences attributes -->
    <string name="setting_catagory_profile">PROFILE SETTING</string>
    <string name="pref_key_name">pref_name</string>
    <string name="pref_title_name">Name</string>
    <string name="pref_key_gender">pref_gender</string>
    <string name="pref_title_gender">Gender</string>



    <string name="pref_dialog_title_gender">Select Gender</string>
    <string name="pref_key_weight">pref_weight</string>
    <string name="pref_title_weight">Weight</string>
    <string name="pref_dialog_title_weight">Enter Weight</string>
    <string name="setting_catagory_speech_report">SPEECH REPORT SETTING</string>
    <string name="pref_key_enable_speech_report">pref_key_enable_speech_report</string>
    <string name="pref_title_enable_speech_report">Enable speech report</string>
    
    <string name="setting_catagory_others">OTHER SETTING</string>
    
    <string name="pref_key_distance_unit">pref_distance_unit</string>
    <string name="pref_title_distance_unit">Distance Unit</string>
    <string name="pref_dialog_title_distance_unit">Select Distance Unit</string>

    <!-- notification -->
    <string name="notification_msg">We are tracking your activity</string>

    <!-- gesture mode -->
    <string name="pause">Pause</string>
    <string name="tracking">Tracking</string>

    <!-- cue msg -->
    <string name="activity_started">activity started</string>
    <string name="activity_paused">activity paused</string>
    <string name="activity_resumed">activity resumed</string>
    <string name="activity_stopped">activity stopped</string>
    <string name="gps">GPS</string>
    <string name="title_activity_statistic">Runners</string>
    <string name="_calories">Calories</string>
    <string name="_distance">Distance</string>
    <string name="_statistics">Statistics</string>
    <string name="_duration">Duration</string>
    <string name="_avg_speed">AVG Speed</string>
    <string name="_avg_pace">AVG Pace</string>
    <string name="_calories_speed">Calories Speed</string>
    <string name="_speed_vs_time">Speed Vs Time</string>
    <string name="_distance_vs_time">Distance Vs Time</string>
    <string name="_graphs">Graphs</string>
    <string name="title_activity_gesture_help">Gestures</string>
    <string name="swipe_up_">Swipe Up:</string>
    <string name="resume_pause_activity">Resume/Pause Activity</string>
    <string name="swipe_down_">Swipe Down:</string>
    <string name="report">Speech Report</string>
    <string name="double_tab_">Double Tab:</string>
    <string name="start_resume_pause_music">Start/Resume/Pause Music</string>
    <string name="swipe_left_">Swipe Left:</string>
    <string name="play_previous_song">Play Previous Song</string>
    <string name="swipe_right_">Swipe Right:</string>
    <string name="play_next_song">Play Next Song</string>
    <string name="swipe_clockwise_">Swipe Clockwise:</string>
    <string name="swipe_anticlockwise_">Swipe Anticlockwise:</string>
    <string name="volume_down">Volume Down</string>
    
    <string name="goal_complete_msg">Well done! You just completed your target</string>
    
    <string name="share">Share</string>

</resources>
