<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory 
        android:title="@string/setting_catagory_profile"
        android:key="pref_profile_settings">
        
        <EditTextPreference 
            android:key="@string/pref_key_name"
            android:title="@string/pref_title_name"/>
        
        <ListPreference 
            android:key="@string/pref_key_gender"
            android:title="@string/pref_title_gender"
            android:dialogTitle="@string/pref_dialog_title_gender"
        	android:entries="@array/pref_array_genders"
        	android:entryValues="@array/pref_array_values_genders"/>
        
        <ca.ece.utoronto.ece1780.runningapp.preference.WeightPickerPreference
            android:key="@string/pref_key_weight"
            android:title="@string/pref_title_weight"
            android:dialogTitle="@string/pref_dialog_title_weight"/>
        
   </PreferenceCategory>
</PreferenceScreen>