<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticActivity$DummySectionFragment" >

    <LinearLayout
        android:id="@+id/table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:background="@drawable/background_border"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/_statistics"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#33b5e5"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/_duration"
                android:textColor="#CCC"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TextViewDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="90dp"
                android:layout_alignParentRight="true"
                android:text="0:00:00"
                android:textColor="#CCC"
                android:textSize="20sp" />
            
        </RelativeLayout>
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#4b6169"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/_distance"
                android:textColor="#CCC"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDistanceUnit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#CCC"
                android:textSize="20sp"
                android:text="@string/unit_distance" />

            <TextView
                android:id="@+id/TextViewDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="90dp"
                android:layout_alignParentRight="true"
                android:text="0"
                android:textColor="#CCC"
                android:textSize="20sp" />
        </RelativeLayout>
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#4b6169"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/_avg_speed"
                android:textColor="#CCC"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewSpeedUnit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#CCC"
                android:textSize="20sp"
                android:text="@string/unit_speed" />

            <TextView
                android:id="@+id/TextViewAVGSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="90dp"
                android:layout_alignParentRight="true"
                android:text="0"
                android:textColor="#CCC"
                android:textSize="20sp" />
        </RelativeLayout>
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#4b6169"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/_avg_pace"
                android:textColor="#CCC"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewPaceUnit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#CCC"
                android:textSize="20sp"
                android:text="@string/unit_pace" />

            <TextView
                android:id="@+id/TextViewAVGPace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="90dp"
                android:layout_alignParentRight="true"
                android:text="0"
                android:textColor="#CCC"
                android:textSize="20sp" />
        </RelativeLayout>
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#4b6169"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/_calories"
                android:textColor="#CCC"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/calories_unit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#CCC"
                android:textSize="20sp"
                android:text="@string/unit_calories" />

            <TextView
                android:id="@+id/TextViewCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="90dp"
                android:layout_alignParentRight="true"
                android:text="0"
                android:textColor="#CCC"
                android:textSize="20sp" />
        </RelativeLayout>
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#4b6169"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/_calories_speed"
                android:textColor="#CCC"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/calories_speed_unit"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="#CCC"
                android:textSize="20sp"
                android:text="@string/unit_calories_speed" />

            <TextView
                android:id="@+id/TextViewCaloriesSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="90dp"
                android:layout_alignParentRight="true"
                android:text="0"
                android:textColor="#CCC"
                android:textSize="20sp" />
        </RelativeLayout>
        
        <View 
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#4b6169"/>
    </LinearLayout>

</RelativeLayout>
